--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "dependencies": {
     "chalk": "^5.1.2",
     "chalk-animation": "^2.0.3",
+    "cli-table": "^0.3.11",
     "figlet": "^1.5.2",
+    "got": "^12.5.2",
     "inquirer": "^9.1.4",
-    "nanospinner": "^1.1.0"
+    "nanospinner": "^1.1.0",
+    "node-fetch": "^3.2.10",
+    "terminal-image": "^2.0.0"
   }
 }
