--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/CapedDemon/Github-CLI",
   "dependencies": {
+    "@octokit/rest": "^19.0.5",
     "chalk": "^5.1.2",
     "chalk-animation": "^2.0.3",
     "cli-table": "^0.3.11",
@@ -27,6 +28,7 @@
     "inquirer": "^9.1.4",
     "nanospinner": "^1.1.0",
     "node-fetch": "^3.2.10",
+    "octokit": "^2.0.10",
     "request": "^2.88.2",
     "terminal-image": "^2.0.0"
   }
