--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "octokit": "^2.0.10",
     "request": "^2.88.2",
     "terminal-image": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/figlet": "^1.5.5",
+    "@types/gradient-string": "^1.1.2"
   }
 }
