--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "terminal-image": "^2.0.0"
   },
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/figlet": "^1.5.5",
-    "@types/gradient-string": "^1.1.2"
+    "@types/gradient-string": "^1.1.2",
+    "@types/inquirer": "^9.0.3"
   }
 }
